<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/menoume_spiti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/home_image_descr"
                android:src="@drawable/menoume_spiti" />

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/who_are_we"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/home_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_are_p1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/home_p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_are_p2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/home_p3"
                android:layout_width="match_parent"
                android:layout_height="141dp"
                android:text="@string/we_are_p3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>